# go-backend/internal/api/routers/DonationRouter.go
@@ -1,0 +1,10 @@
+package router
+
+import (
+	"app/internal/api/contorllers"
+	"github.com/gin-gonic/gin"
+)
+
+func (router *Router) DonationRouters(group *gin.RouterGroup) {
+	group.POST("/check_donation", controller.CheckDonation)
+}
